--- a/index.html
+++ b/index.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    Olá mundo do HTML
-    Alteração
-</body>
+    <head>
+        <meta charset="UTS-8">
+        <meta name="description" content="Grátis HTML Aula">
+        <meta name="keyword" content="HTML, CSS, JavaScript">
+        <meta name="author" content="Ana Francisca">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Título Principal -->
+        <title>Principal 1</title>
+    </head>
+    <body>
+       <h1>Título 1</h1>
+       <h2>Titulo 2</h2>
+       <h3>Título 3</h3>
+       <h4>Título 4</h4>
+       <h5>Título 5</h5>
+       <h6>Título 6</h6>
+    
+        <!--
+            Este é um comentário de Lorem
+        -->
+        <p>
+            Hoje está fazendo um lindo dia de chuva
+        </p>
+        <p style="background-color: violet">
+            <b>Lorem ipsum</b> dolor sit amet consectetur adipisicing elit. Ab nobis labore nam ipsa officiis expedita id consequuntur nemo dignissimos, mollitia suscipit minus neque. Maiores officiis eius accusantium ipsa? A, similique.
+        </p>
+        <p>
+            <strong><small>Pellentesque a aliquam dui,</small></strong> non fringilla nulla. Integer convallis ipsum nisl. Duis iaculis porttitor luctus. Cras non ipsum ultrices ante imperdiet egestas accumsan et diam. Vivamus mollis tempus finibus. Fusce euismod viverra ligula, ac gravida turpis. Nam semper vestibulum tellus, a vestibulum arcu porttitor laoreet. Donec iaculis feugiat risus non ultricies. Vestibulum purus arcu, commodo imperdiet quam a, mollis accumsan elit. Pellentesque lacinia eros sed ultricies iaculis.
+        </p>
+        <p>
+            <i><del>Lorem</del></i> ipsum dolor sit amet consectetur <em>adipisicing elit.</em> Id, quam facere? Ad laudantium vel itaque quos, praesentium quisquam unde optio quibusdam iste sed asperiores impedit molestias tempora. Impedit, nisi quibusdam?
+        </p>
+        <p>
+            <mark style="background-color:aqua;color:black;"><em><b>Lorem ipsum</b></em></mark> dolor sit amet, consectetur adipisicing elit. Veritatis tenetur, veniam eos error odio ea culpa delectus modi fugit amet maxime minus fuga possimus ducimus impedit vero placeat inventore quos.
+        </p>
+        <p style="background-color: greenyellow;">
+            <ins>Lorem ipsum dolor</ins> sit amet consectetur <u>adipisicing elit.</u> Sunt vero saepe cum voluptates quia totam inventore libero. Ut reprehenderit, distinctio eum numquam esse dolorem sed veniam unde minus, itaque autem?
+        </p>
+        <p>
+            Lorem ipsum <b>2<sup>10</sup></b> sit amet, consectetur adipisicing elit. Dolores, fuga ab quasi, fugit possimus inventore dolor molestiae, distinctio sunt natus nihil! Magnam, dolorum aliquid hic nesciunt culpa ea quo iste.
+        </p>
+        <p>
+            <sub>Lorem ipsum dolor sit amet consectetur adipisicing elit.</sub> Impedit reiciendis voluptatem at! Quo exercitationem sequi iste voluptatem reprehenderit velit mollitia magni qui debitis consequuntur, ipsam vel dolores ipsa blanditiis eos!
+        </p>
+        <p>
+            <b>H<sub>2</sub>O</b>
+        </p>
+    </body>
 </html>
